@@ -160,8 +160,8 @@
 #define _POSIX_CLOCKRES_MIN	20000000
 
 
-#ifdef CYGBLD_ISO_SSIZET_HEADER
-# include CYGBLD_ISO_SSIZET_HEADER
+#ifdef CYGBLD_ISO_SSIZE_T_HEADER
+# include CYGBLD_ISO_SSIZE_T_HEADER
 #else
 # ifndef __STRICT_ANSI__
 #  define SSIZE_MAX LONG_MAX
